<resources>
    <string name="app_name">StampApp</string>
    <string name="my_name">Carlos Andrés Castaño Gaitán</string>
    <string name="sign_up_google">Ingresar con Google</string>
    <string name="recover_your_password">Recupera Tu Contraseña</string>
    <string name="login">Regístrate</string>
    <string name="start">Comienza</string>
    <string name="no_have_account">No tienes cuenta?</string>
    <string name="have_account">Ya tienes cuenta?</string>
    <string name="sign_up">Ingresar</string>
    <string name="home_text">Inicia una nueva aventura con StampApp y descubre una nueva forma de ver el mundo.</string>
    <string name="login_text">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="instructional_message">¡Bienvenido a StampApp! Para comenzar a disfrutar de todas nuestras funciones, necesitamos que te registres. Solo te llevará un momento.</string>
    <string name="placeholder_email">Correo Electrónico</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="terms_conditions">Acepto los Términos y Condiciones</string>
    <string name="instructional_message_recover">¿Olvidaste tu contraseña? No te preocupes, te ayudaremos a recuperarla. Ingresa tu correo electrónico asociado a tu cuenta de StampApp y te enviaremos un enlace seguro para restablecer tu contraseña.</string>
    <string name="instructional_message_verify">Ingresa el código de 4 dígitos que enviamos a tu email.</string>
</resources>