<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/iv_logo_registration"
            android:layout_width="163dp"
            android:layout_height="152dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_appName_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/angkor"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tv_instructional_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/annapurna_sil"
            android:text="@string/instructional_message"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_username_registration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            app:errorEnabled="true"
            android:fontFamily="@font/annapurna_sil"
            android:hint="Nombres"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_userlastname_registration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/annapurna_sil"
            android:hint="Apellidos"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_email_registration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/annapurna_sil"
            android:hint="@string/placeholder_email"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_phone_registration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/annapurna_sil"
            android:hint="Teléfono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_password_registration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:fontFamily="@font/annapurna_sil"
            android:hint="@string/placeholder_password"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_confirmPassword_registration"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/annapurna_sil"
            android:hint="Repetir Contraseña"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/cb_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/annapurna_sil"
            android:text="@string/terms_conditions"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:buttonTint="@color/dark_blue" />

        <Button
            android:id="@+id/bt_login_registration"
            style="@style/ButtonRounded"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/annapurna_sil"
            android:includeFontPadding="false"
            android:text="@string/login"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_haveAccount_registration"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/annapurna_sil"
                android:text="@string/have_account"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/annapurna_sil"
                android:text="@string/sign_up"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>