<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/tv_have_account2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/annapurna_sil"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toBottomOf="@+id/b_sign_up_google" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/annapurna_sil"
        android:text="@string/have_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_sign_up_google" />

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="152dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_app_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/angkor"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/iv_logo_login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_login"
        android:layout_width="274dp"
        android:layout_height="66dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/annapurna_sil"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        style="@style/EditText"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_username"
        style="@style/EditText"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_login" />

    <TextView
        android:id="@+id/tv_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annapurna_sil"
        android:text="@string/recover_your_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_sign_up" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_login"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/iv_user"
        app:srcCompat="@drawable/password" />

    <Button
        android:id="@+id/b_sign_up"
        style="@style/ButtonRounded"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/annapurna_sil"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/b_sign_up_google"
        style="@style/ButtonRounded"
        android:layout_width="316dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/annapurna_sil"
        android:includeFontPadding="false"
        android:text="@string/sign_up_google"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        app:icon="@drawable/google"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recover_password" />


</androidx.constraintlayout.widget.ConstraintLayout>