<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_start"
        style="@style/ButtonRounded"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/annapurna_sil"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="1dp"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_home"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/tv_app_name_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/angkor"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_home" />

    <ImageView
        android:id="@+id/iv_logo_home"
        android:layout_width="221dp"
        android:layout_height="219dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tv_text_home"
        android:layout_width="314dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/annapurna_sil"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name_home"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/tv_login_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/annapurna_sil"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_start"
        app:layout_constraintVertical_bias="0.107" />

</androidx.constraintlayout.widget.ConstraintLayout>